# haskell-secret-number

./: README.md  secret-number.cabal
.stack-work/install/x86_64-linux/lts-8.4/8.0.2/flag-cache/: ansi-terminal-0.6.2.3-4HPxin1iv6RAndS8lH3nzo  random-1.1-9tceXaeYIMZ4JrKq20Egog  secret-number-0.1.0.0-HKVk4cItSxFFTBUm44FvXN
.stack-work/install/x86_64-linux/lts-8.4/8.0.2/lib/x86_64-linux-ghc-8.0.2/secret-number-0.1.0.0-HKVk4cItSxFFTBUm44FvXN/: Lib.dyn_hi  Lib.hi
app/: Main.hs
src/: MainMenu.hs  SecretNumberGame.hs
test/: Spec.hs
