name:                secret-number
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/secret-number#readme
license:             BSD3
license-file:        LICENSE
author:              Sonny Kjellberg
maintainer:          sonnykjellberg@gmail.com
copyright:           2017 Sonny Kjellberg
category:            Console game
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     SecretNumberGame
                     , MainMenu
  build-depends:       base >= 4.7 && < 5
                     , random
                     , ansi-terminal
  default-language:    Haskell2010

executable secret-number-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , secret-number
                     , random
                     , ansi-terminal
  default-language:    Haskell2010

test-suite secret-number-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , secret-number
                     , random
                     , ansi-terminal
                     , hspec
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/secret-number
